***** Changes ****

v2.3
----
 - fix: column ordering in Instance is now natural rather than alphabetical
 - fix: null values do appear in Instance map
 - new: a driver-specific value filter (used for instance to call Calendar.getDate() for mysql)
 - new: parametrized getters (give a Map of external parameters as argument to attribute/action parameters)
 - new: flag to use login.do referer if no saved request when succesfully authentified
 - new: let the user customize AuthenticationFilter session keys
 - fix: refresh cached instance of logged user at each request
 - new: added Entity.getAttributes() and Entity.getActions()
 - fix: don't log anything during Logger initialization
 - new: allows db user & password to be specified within the JDBC URL
 - new: added model.Entity.getColumnType(column)

v2.2.1 (September 2008)
------
 - fix: filters out requests towards login.do when already authentified in AuthenticationFilter
 - fix: EmailChecker smtp validation was broken
 - new: getAuthenticatedIndexPage() takes the http session as argument
 - fix: authentication filter now uses the overloadable getAuthenticatedIndexPage() method

v2.2 (September 2008)
----
 - fix: RowIterator.hasNext now works when called several times in a row
 - new: method velosurf.VelosurfTool.getDatabase() to ease the use of Velosurf from Java
 - fix: Attribute.getRows() had a memory leak
 - fix: Entity.fetch(Map) could fail without reason
 - fix: corrected a concurrency problem in statement pools
 - new: added an 'order' attribute to <exported-key>
 - new: method HttpQueryTool.getExtraKeys()
 - fix: compilation under java 1.6 now works
 - new: mail notifications (see Logger.java api)
 - new: caching attribute for entity attributes
 - fix: Instance.get(key) now takes an Object argument to propery inherit parent's generic getter
 - new: added the debugging method $query.queryString
 - new: url, driver and schema can now be part of <database> or of <credentials>